Various UI changes, tested on car

--- a/client/index.html
+++ b/client/index.html
@@ -27,39 +27,64 @@
         </div>
       </div>
       <div class="left-panel">
-        <div class="info-panel">
-          <p>Coolant: </p><p id="ect"></p>
+        <div class="info-panel-left">
+          <p class="data-title">Coolant: </p>
+          <hr />
+          <p id="ect" class="data-reading" class="data-reading"></p>
         </div>
-        <div class="info-panel">
-          <p>IAT: </p><p id="iat"></p>
+        <div class="info-panel-left">
+          <p class="data-title">IAT: </p>
+          <hr />
+          <p id="iat" class="data-reading"></p>
         </div>
-        <div class="info-panel">
-          <p>MAP: </p><p id="map"></p>
+        <div class="info-panel-left">
+          <p class="data-title">MAP: </p>
+          <hr />
+          <p id="map" class="data-reading"></p>
         </div>
-        <div class="info-panel">
-          <p>Gearbox Temp: </p><p id="gearboxTemp"></p>
+        <div class="info-panel-left">
+          <p class="data-title">Gearbox Temp: </p>
+          <hr />
+          <p id="gearboxTemp" class="data-reading">50</p>
         </div>        
       </div>
       <div class="middle-panel">
-        <div class="info-panel">
-          <p>RPM: </p><p id="rpmNum"></p>
+        <div class="info-panel-middle">
+          <p class="data-title">RPM: </p>
+          <hr />
+          <p id="rpmNum" class="data-reading"></p>
         </div>
-        <div class="info-panel">
-          <p>Speed: </p><p id="speed"></p>
+        <div class="info-panel-middle">
+          <p class="data-title">Speed: </p>
+          <hr />
+          <p id="speed" class="data-reading"></p>
+        </div>
+        <div class="info-panel-middle">
+          <p class="data-title">Gear: </p>
+          <hr />
+          <p id="gear" class="data-reading-gear"></p>
         </div>
       </div>
       <div class="right-panel">
-        <div class="info-panel">
-          <p>Oil Temp: </p><p id="oilTemp"></p>
+        <div class="info-panel-right">
+          <p class="data-title">Oil Temp: </p>
+          <hr />
+          <p id="oilTemp" class="data-reading">96</p>
         </div>
-        <div class="info-panel">
-          <p>Oil Pressure: </p><p id="oilPressure"></p>
+        <div class="info-panel-right">
+          <p class="data-title">Oil Pressure: </p>
+          <hr />
+          <p id="oilPressure" class="data-reading">100</p>
         </div>
-        <div class="info-panel">
-          <p>TPS: </p><p id="tps"></p>
+        <div class="info-panel-right">
+          <p class="data-title">TPS: </p>
+          <hr />
+          <p id="tps" class="data-reading"></p>
         </div>
-        <div class="info-panel">
-          <p>Voltage: </p><p id="voltage"></p>
+        <div class="info-panel-right">
+          <p class="data-title">Voltage: </p>
+          <hr />
+          <p id="voltage" class="data-reading"></p>
         </div>
       </div>
     </div>
