Added air/fuel ratio. Tried configuring map/tps

--- a/client/index.html
+++ b/client/index.html
@@ -43,9 +43,9 @@
           <p id="map" class="data-reading"></p>
         </div>
         <div class="info-panel-left">
-          <p class="data-title">Gearbox Temp: </p>
+          <p class="data-title">Air/Fuel: </p>
           <hr />
-          <p id="gearboxTemp" class="data-reading">0</p>
+          <p id="lambdaRatio" class="data-reading"></p>
         </div>        
       </div>
       <div class="middle-panel">
@@ -69,12 +69,12 @@
         <div class="info-panel-right">
           <p class="data-title">Oil Temp: </p>
           <hr />
-          <p id="oilTemp" class="data-reading">0</p>
+          <p id="oilTemp" class="data-reading">-</p>
         </div>
         <div class="info-panel-right">
           <p class="data-title">Oil Pressure: </p>
           <hr />
-          <p id="oilPressure" class="data-reading">0</p>
+          <p id="oilPressure" class="data-reading">-</p>
         </div>
         <div class="info-panel-right">
           <p class="data-title">TPS: </p>
