Initial layout setup for the TPS bar, with the javascript logic working

--- a/client/index.html
+++ b/client/index.html
@@ -48,6 +48,7 @@
           <p id="lambdaRatio" class="data-reading"></p>
         </div>        
       </div>
+
       <div class="middle-panel">
         <div class="info-panel-middle">
           <p class="data-title">RPM: </p>
@@ -59,12 +60,28 @@
           <hr />
           <p id="speed" class="data-reading"></p>
         </div>
-        <div class="info-panel-middle">
+        <!-- <div class="info-panel-middle">
           <p class="data-title">Gear: </p>
           <hr />
           <p id="gear" class="data-reading-gear"></p>
+        </div> -->
+        <div class="info-panel-middle2">
+          <div class="grid-container">
+            <div class="inner-middle-left">
+              <p class="data-title">test1: </p>
+              <hr />
+              <p id="gear" class="data-reading">1</p>
+            </div>
+            <div class="inner-middle-right">
+              <p class="data-title">TPS: </p>
+              <div class="tpsBarContainer">
+                <div id="tpsbar" class="tps-bar"></div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+
       <div class="right-panel">
         <div class="info-panel-right">
           <p class="data-title">Oil Temp: </p>
