Finalised TPS bar position for now, readjusted all heights as aspect ratio changed

--- a/client/index.html
+++ b/client/index.html
@@ -65,14 +65,14 @@
           <hr />
           <p id="gear" class="data-reading-gear"></p>
         </div> -->
-        <div class="info-panel-middle2">
+        <div class="middle-panel-bottom">
           <div class="grid-container">
-            <div class="inner-middle-left">
-              <p class="data-title">test1: </p>
+            <div class="middle-panel-bottom-left">
+              <p class="data-title">Gear: </p>
               <hr />
-              <p id="gear" class="data-reading">1</p>
+              <p id="gear" class="data-reading-gear">1</p>
             </div>
-            <div class="inner-middle-right">
+            <div class="middle-panel-bottom-right">
               <p class="data-title">TPS: </p>
               <div class="tpsBarContainer">
                 <div id="tpsbar" class="tps-bar"></div>
