--- a/client/index.html
+++ b/client/index.html
@@ -4,13 +4,66 @@
     <meta charset="utf-8">
     <title>CAN Bus Dash Display</title>
     <link rel="stylesheet" href="index.css">
-    <script src="/socket.io/socket.io.js"></script>
+    <!-- <script src="/socket.io/socket.io.js"></script> --> <!-- Linux -->
 </head>
 <body>
+  <script src="https://unpkg.com/ws"></script> <!-- Windows -->
   <script src="/index.js"></script>
   <div class="container">
       <div class="top-panel">
         <div id="rpmbar" class="rpm-bar"></div>
+      </div>
+      <div class="top-panel-thousands-marks">
+        <div class="grid-item grid-item-zero">
+          <div class='grid-item-p'>
+            <p>0</p>
+          </div>
+        </div>
+        <div class="grid-item">
+          <div class='grid-item-p'>
+            <p>1</p>
+          </div>
+        </div>
+        <div class="grid-item">
+          <div class='grid-item-p'>
+            <p>2</p>
+          </div>
+        </div>
+        <div class="grid-item">
+          <div class='grid-item-p'>
+            <p>3</p>
+          </div>
+        </div>
+        <div class="grid-item">
+          <div class='grid-item-p'>
+            <p>4</p>
+          </div>
+        </div>
+        <div class="grid-item">
+          <div class='grid-item-p'>
+            <p>5</p>
+          </div>
+        </div>
+        <div class="grid-item">
+          <div class='grid-item-p'>
+            <p>6</p>
+          </div>
+        </div>
+        <div class="grid-item">
+          <div class='grid-item-p'>
+            <p>7</p>
+          </div>
+        </div>
+        <div class="grid-item">
+          <div class='grid-item-p'>
+            <p>8</p>
+          </div>
+        </div>
+        <div class="grid-item">
+          <div class='grid-item-p'>
+            <p>9</p>
+          </div>
+        </div>
       </div>
 
       <div class="left-panel">
