Few small tweaks once on Pi

--- a/client/index.html
+++ b/client/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <title>CAN Bus Dash Display</title>
     <link rel="stylesheet" href="index.css">
-    <!-- <script src="/socket.io/socket.io.js"></script> --> <!-- Linux -->
+    <script src="/socket.io/socket.io.js"></script> <!-- Linux -->
 </head>
 <body>
-  <script src="https://unpkg.com/ws"></script> <!-- Windows -->
+  <!-- <script src="https://unpkg.com/ws"></script> --> <!-- Windows -->
   <script src="/index.js"></script>
   <div class="container">
       <div class="top-panel">
