Small format change

--- a/client/index.html
+++ b/client/index.html
@@ -15,54 +15,34 @@
       </div>
       <div class="top-panel-thousands-marks">
         <div class="grid-item grid-item-zero">
-          <div class='grid-item-p'>
-            <p>0</p>
-          </div>
+          <div class='grid-item-p'><p>0</p></div>
         </div>
         <div class="grid-item">
-          <div class='grid-item-p'>
-            <p>1</p>
-          </div>
+          <div class='grid-item-p'><p>1</p></div>
         </div>
         <div class="grid-item">
-          <div class='grid-item-p'>
-            <p>2</p>
-          </div>
+          <div class='grid-item-p'><p>2</p></div>
         </div>
         <div class="grid-item">
-          <div class='grid-item-p'>
-            <p>3</p>
-          </div>
+          <div class='grid-item-p'><p>3</p></div>
         </div>
         <div class="grid-item">
-          <div class='grid-item-p'>
-            <p>4</p>
-          </div>
+          <div class='grid-item-p'><p>4</p></div>
         </div>
         <div class="grid-item">
-          <div class='grid-item-p'>
-            <p>5</p>
-          </div>
+          <div class='grid-item-p'><p>5</p></div>
         </div>
         <div class="grid-item">
-          <div class='grid-item-p'>
-            <p>6</p>
-          </div>
+          <div class='grid-item-p'><p>6</p></div>
         </div>
         <div class="grid-item">
-          <div class='grid-item-p'>
-            <p>7</p>
-          </div>
+          <div class='grid-item-p'><p>7</p></div>
         </div>
         <div class="grid-item">
-          <div class='grid-item-p'>
-            <p>8</p>
-          </div>
+          <div class='grid-item-p'><p>8</p></div>
         </div>
         <div class="grid-item">
-          <div class='grid-item-p'>
-            <p>9</p>
-          </div>
+          <div class='grid-item-p'><p>9</p></div>
         </div>
       </div>
 
