UI configured, refactored a bit of the server for sending the data up

--- a/client/LapTimingDisplay/index.html
+++ b/client/LapTimingDisplay/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>CAN Bus Dash Display</title>
+  <title>WRD - Data w/Timing</title>
   <link rel="stylesheet" href="index.css">
-  <script src="/socket.io/socket.io.js"></script> <!-- Linux -->
+  <script src="/socket.io/socket.io.js"></script>
 </head>
   <body>
-    <!-- <script src="https://unpkg.com/ws"></script> --> <!-- Windows -->
     <script src="/LapTimingDisplay/index.js"></script>
     <div class="container">
       <div class="top-panel">
