--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>CAN Bus Dash Display</title>
+  <title>WRD - Data</title>
   <link rel="stylesheet" href="index.css">
   <script src="/socket.io/socket.io.js"></script> <!-- Linux -->
 </head>
