--- a/client/index.html
+++ b/client/index.html
@@ -4,10 +4,9 @@
   <meta charset="utf-8">
   <title>WRD - Data</title>
   <link rel="stylesheet" href="index.css">
-  <script src="/socket.io/socket.io.js"></script> <!-- Linux -->
+  <script src="/socket.io/socket.io.js"></script>
 </head>
   <body>
-    <!-- <script src="https://unpkg.com/ws"></script> --> <!-- Windows -->
     <script src="/index.js"></script>
     <div class="container">
       <div class="top-panel">
