--- a/client/ShiftLightDisplay/index.html
+++ b/client/ShiftLightDisplay/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>WRD - Data</title>
+  <title>WRD - Shift Light Display</title>
   <link rel="stylesheet" href="index.css">
   <script src="/socket.io/socket.io.js"></script>
 </head>
   <body>
+    <script src="/ShiftLightDisplay/index.js"></script>
     <div class="container">
       <div class="shift-light-panel">
         <div id="shift-light-1" class="shift-light-circle"></div>
@@ -53,6 +54,5 @@
         </div>
       </div>
     </div>
-    <script src="/index.js"></script>
   </body>
 </html>
