--- a/client/ShiftLightDisplay/index.html
+++ b/client/ShiftLightDisplay/index.html
@@ -53,6 +53,94 @@
           <div class='rpm-bar-grid-item-p'><p>9</p></div>
         </div>
       </div>
+
+      <div class="slidecontainer">
+        <p>Custom range slider:</p>
+        <input type="range" min="1" max="9000" value="50" class="slider" id="myRange">
+      </div>
+      
+      <div class="data-section">
+        <div class="left-panel">
+          <div class="info-panel-left">
+            <p class="data-title">Coolant:</p>
+            <hr />
+            <p id="ect" class="data-reading">-</p>
+          </div>
+          <div class="info-panel-left">
+            <p class="data-title">IAT:</p>
+            <hr />
+            <p id="iat" class="data-reading">-</p>
+          </div>
+          <!-- <div class="info-panel-left">
+            <p class="data-title">MAP:</p>
+            <hr />
+            <p id="map" class="data-reading">-</p>
+          </div> -->
+          <div class="info-panel-left">
+            <p class="data-title">Air/Fuel:</p>
+            <hr />
+            <p id="lambdaRatio" class="data-reading">-</p>
+          </div>
+        </div>
+
+        <div class="middle-panel">
+          <div class="middle-panel-top-section">
+            <div class="info-panel-middle-top">
+              <div class="data-title">RPM:</div>
+              <hr />
+              <p id="rpmNum" class="data-reading">-</p>
+            </div>
+            <div class="info-panel-middle-top">
+              <div class="data-title">Speed:</div>
+              <hr />
+              <p id="speed" class="data-reading">-</p>
+            </div>
+          </div>
+          <div class="middle-panel-bottom-section">
+            <div class="test-grid-template">
+              <div class="info-panel-middle-bottom-left">
+                <div class="data-title">Gear:</div>
+                <hr />
+                <p id="gear" class="data-reading-gear">-</p>
+              </div>
+              <div class="info-panel-middle-bottom-right">
+                <div class="data-title">Brake | TPS</div>
+                <div class="bar-section-container">
+                  <div class="brake-bar-container">
+                    <div id="brakebar" class="brake-bar"></div>
+                  </div>
+                  <div class="tps-bar-container">
+                    <div id="tpsbar" class="tps-bar"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="right-panel">
+          <div class="info-panel-right">
+            <p class="data-title">Oil Temp:</p>
+            <hr />
+            <p id="oilTemp" class="data-reading">-</p>
+          </div>
+          <div class="info-panel-right">
+            <p class="data-title">Oil Pressure:</p>
+            <hr />
+            <p id="oilPressure" class="data-reading">-</p>
+          </div>
+          <!-- <div class="info-panel-right">
+            <p class="data-title">TPS:</p>
+            <hr />
+            <p id="tps" class="data-reading">-</p>
+          </div> -->
+          <div class="info-panel-right">
+            <p class="data-title">Voltage:</p>
+            <hr />
+            <p id="voltage" class="data-reading">-</p>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
