Smaller bar implemented plus json configured shift light range

--- a/client/LapTimingDisplay/index.html
+++ b/client/LapTimingDisplay/index.html
@@ -96,22 +96,22 @@
         <div class="bottom-info-panel">
           <p class="data-title">Current Lap:</p>
           <hr />
-          <p id="currentLap" class="data-reading">-</p>
+          <p id="currentLap" class="data-reading">00.00.000</p>
         </div>
         <div class="bottom-info-panel">
           <p class="data-title">Best Lap:</p>
           <hr />
-          <p id="bestLap" class="data-reading">-</p>
+          <p id="bestLap" class="data-reading">00.00.000</p>
         </div>
         <div class="bottom-info-panel">
           <p class="data-title">Last Lap:</p>
           <hr />
-          <p id="lastLap" class="data-reading">-</p>
+          <p id="lastLap" class="data-reading">00.00.000</p>
         </div>
         <div class="bottom-info-panel">
           <p class="data-title">PB Lap:</p>
           <hr />
-          <p id="pbLap" class="data-reading">-</p>
+          <p id="pbLap" class="data-reading">00.00.000</p>
         </div>
       </div>
     </div>
