Start datalogging from race dash via button click

--- a/client/ShiftLightDisplay/index.html
+++ b/client/ShiftLightDisplay/index.html
@@ -56,6 +56,9 @@
       
       <div class="data-section">
         <div class="left-panel">
+          <div id="datalogging-alert" class="info-panel-datalogging">
+            <p class="data-title-datalogging">Datalogging</p>
+          </div>
           <div class="info-panel-left">
             <p class="data-title">Coolant:</p>
             <hr />
@@ -99,7 +102,7 @@
                 <p id="gear" class="data-reading-gear">-</p>
               </div>
               <div class="info-panel-middle-bottom-right">
-                <div class="data-title">Brake | TPS</div>
+                <p class="data-title-brake-tps">Brake | TPS</p>
                 <div class="bar-section-container">
                   <div class="brake-bar-container">
                     <div id="brakebar" class="brake-bar"></div>
