Working solution, need to test

--- a/client/ShiftLightDisplay/index.html
+++ b/client/ShiftLightDisplay/index.html
@@ -57,7 +57,8 @@
       <div class="data-section">
         <div class="left-panel">
           <div id="datalogging-alert" class="info-panel-datalogging">
-            <p class="data-title-datalogging">Datalogging</p>
+            <!-- <p class="data-title-datalogging">Datalogging</p> -->
+            <button class="data-title-datalogging-btn" id="btn-datalogging">Datalogging</button>
           </div>
           <div class="info-panel-left">
             <p class="data-title">Coolant:</p>
